--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,34 +2,13 @@ name: CI
 
 on:
   push:
-    branches: 
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'  # Set the Node.js version you want to use
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run ESLint
-        run: npm run lint
-
   build:
     runs-on: ubuntu-latest
-    needs: lint  # Ensures the lint job runs before build
 
     steps:
       - name: Checkout repository
@@ -40,9 +19,16 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Navigate to the React app directory
+        run: cd webapp/React/forcasttx
+
       - name: Install dependencies
         run: npm ci
 
+      - name: Run ESLint
+        run: npm run lint
+
+      # Optional: Run React build
       - name: Build React App
         run: npm run build
 
