--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,16 +19,18 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Navigate to the React app directory
-        run: cd webapp/React/forcasttx
-
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd webapp/React/forcasttx  # Navigate to the directory containing package.json
+          npm ci
 
       - name: Run ESLint
-        run: npm run lint
+        run: |
+          cd webapp/React/forcasttx  # Navigate to the directory containing package.json
+          npm run lint
 
       # Optional: Run React build
       - name: Build React App
-        run: npm run build
-
+        run: |
+          cd webapp/React/forcasttx  # Navigate to the directory containing package.json
+          npm run build
