--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,13 @@ jobs:
         run: |
           cd webapp/React/forcasttx  # Navigate to the directory containing package.json
           npm run lint
+          
+      - name: Run Code Review with ChatGPT
+        run: |
+         cd webapp/React/forcasttx
+         node reviewCode.js  # Assuming reviewCode.js is the script you created above
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}  # Add your OpenAI API key to GitHub Secrets
 
       # Optional: Run React build
       - name: Build React App
