--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,20 +24,23 @@ jobs:
           cd webapp/React/forcasttx  # Navigate to the directory containing package.json
           npm ci
 
-      - name: Run ESLint
-        run: |
-          cd webapp/React/forcasttx  # Navigate to the directory containing package.json
-          npm run lint
+      #- name: Run ESLint
+#        run: |
+        #  cd webapp/React/forcasttx  # Navigate to the directory containing package.json
+       #   npm run lint
           
       - name: Run Code Review with ChatGPT
         run: |
          cd webapp/js
          node reviewCode.js  # Assuming reviewCode.js is the script you created above
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}  # Add your OpenAI API key to GitHub Secrets
-
-      # Optional: Run React build
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }} 
+     
       - name: Build React App
         run: |
           cd webapp/React/forcasttx  # Navigate to the directory containing package.json
           npm run build
+      - name: start React App
+        run: |
+          cd webapp/React/forcasttx  # Navigate to the directory containing package.json
+          npm start
