--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,10 @@ jobs:
           cd webapp/React/forcasttx
           npm ci
 
-      - name: Run ESLint
-        run: |
-          cd webapp/React/forcasttx
-          npm run lint
+      #- name: Run ESLint
+        #run: |
+         # cd webapp/React/forcasttx
+          #npm run lint
 
       - name: Build React App
         run: |
