--- a/webapp/React/forcasttx/package.json
+++ b/webapp/React/forcasttx/package.json
@@ -48,7 +48,8 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.23.0",
+    "eslint": "^8.56.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
