--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Build React App
         run: |
+          unset CI
           cd webapp/React/forcasttx
           npm run build
 
